--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,10 +1,10 @@
 streamlit==1.45.1
 pandas==2.2.3
-numpy>=1.26.0,<2.2.0
+numpy==1.26.4
 sweetviz==2.3.1
 seaborn==0.13.2
-matplotlib==3.10.0
+matplotlib==3.8.4
 plotly==6.1.1
 scikit-learn==1.6.1
 openpyxl==3.1.5
-setuptools
+setuptools==69.5.1
